--- a/frdmk22f_usb_dev_composite_hid_audio_unified_lite_bm/.cproject
+++ b/frdmk22f_usb_dev_composite_hid_audio_unified_lite_bm/.cproject
@@ -582,7 +582,7 @@
 &lt;vendor&gt;NXP&lt;/vendor&gt;
 &lt;memory can_program="true" id="Flash" is_ro="true" size="512" type="Flash"/&gt;
 &lt;memory id="RAM" size="128" type="RAM"/&gt;
-&lt;memoryInstance derived_from="Flash" driver="FTFA_2K.cfx" id="PROGRAM_FLASH" location="0x0" size="0x80000"/&gt;
+&lt;memoryInstance derived_from="Flash" driver="FTFA_2K.cfx" edited="true" id="PROGRAM_FLASH" location="0xa000" size="0x76000"/&gt;
 &lt;memoryInstance derived_from="RAM" id="SRAM_UPPER" location="0x20000000" size="0x10000"/&gt;
 &lt;memoryInstance derived_from="RAM" id="SRAM_LOWER" location="0x1fff0000" size="0x10000"/&gt;
 &lt;peripheralInstance derived_from="FTFA-FlashConfig" id="FTFA-FlashConfig" location="0x400"/&gt;
@@ -662,7 +662,7 @@
 		</configuration>
 	</storageModule>
 	<storageModule moduleId="com.nxp.mcuxpresso.core.datamodels">
-		<sdkName>SDK_2.x_TWR-K22F120M</sdkName>
+		<sdkName>SDK_2.x_FRDM-K22F</sdkName>
 		<sdkVersion>2.4.1</sdkVersion>
 	</storageModule>
 </cproject>
